# Eterna-Home

./: .gitignore  AREA_MANAGEMENT_README.md  AREA_NODE_IMPLEMENTATION.md  ASYNC_VOICE_PROCESSING.md  AVVIO.md  BIM_ASYNC_CONVERSION.md  BIM_INTEGRATION_STRATEGY.md  CHECKLIST.md  FINAL_SECURITY_CHECK_REPORT.md  FUNZIONALITA-INSTALLATE.txt  GESTIONE-DB.md  IMPLEMENTATION_DETAILS.md  LESSONS_LEARNED.md  LOCAL_INTERFACE_INTEGRATION.md  LOGGING_MULTI_TENANT_IMPLEMENTATION.md  LOGGING_UPDATE_SUMMARY.md  MICRO_STEP_1_2_COMPLETATO.md  MULTI_TENANT_FILTERING_SUMMARY.md  MULTI_TENANT_IMPLEMENTATION.md  MULTI_TENANT_IMPLEMENTATION_COMPLETE.md  RBAC_TESTING_DOCUMENTATION.md  README.md  README_OLD.md  SOLIDITY_IMPLEMENTATION_REPORT.md  STARTUP.md  STRATEGIC_POINTS.md  SYSTEM_MONITORING_SUMMARY.md  TEST-ALTA-PRIORITA.md  TEST-FAILED.md  TEST-REPORT-FINALE.md  TEST-REPORT-LINE.txt  TEST-REPORT-SHORT.txt  TEST-REPORT.txt  TEST-SUPER.md  TEST.md  TODO-ALEMBIC-PRODUZIONE.md  VOICE_INTERFACES_README.md  __init__.py  alembic.ini  apply_all_tables.py  (+111 more)
backend/: .env  DBMIGRATION.md  __init__.py  alembic.ini  apply_migration.py  apply_migrations.py  check_alembic_version.py  check_tables.py  check_users.py  create_db.py  create_migration.py  create_test_db.py  create_users_table.py  crud.py  debug_test.py  drop_alembic_version.py  drop_all_tables.py  drop_test_db.py  eterna_home.db  fix_alembic_version.py  fix_bim_fields.py  force_migration.py  list_tables.py  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  recreate_db.py  requirements.txt  reset_alembic.py  reset_alembic_version.py  (+12 more)
(+511 files in other folders)
