[tool.poetry]
name = "eterna_home_backend"
version = "0.1.0"
description = "Backend per Eterna Home - Sistema di Domotica"
authors = ["Flavio <flavio@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.11.5"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pytest = "^8.0.0"
httpx = "^0.26.0"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
loguru = "^0.7.3"
